add: windows 11 touch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="headline">Countdown to my birthday:</h1>
+    <h1 id="headline">Countdown for the <a href="https://www.microsoft.com/en-us/windows/event?ocid=usoc_sv_cons_win_awr_TWSound" alt="Microsoft event">Windows !!</a> :</h1>
     <div id="countdown">
       <ul>
         <li><span id="days"></span>days</li>
