change text color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="bg-img"></div>
   <div class="container">
     <h1 id="headline">Countdown for the <a href="https://www.microsoft.com/en-us/windows/event?ocid=usoc_sv_cons_win_awr_TWSound" alt="Microsoft event">Windows !!</a> launch :</h1>
     <div id="countdown">
