add: autoplay music

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       <span>🎉</span>
       <span>🎂</span>
     </div>
-  </div>    
+  </div> 
+  
+  <audio autoplay loop>
+    <source src="./resources/audio/microsoftTime.mp3" type="audio/mp3">
+    <!-- <embed src="./resources/audio/microsoftTime.mp3" loop="true" autostart="true" width="2" height="0"> -->
+    <p>If you are reading this, it is because your browser does not support the audio element.     </p>
+    </audio>   
 </body>
 </html>
