--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div> 
   
-  <audio autoplay loop>
+  <audio autoplay controls loop>
     <source src="./resources/audio/microsoftTime.mp3" type="audio/mp3">
     <!-- <embed src="./resources/audio/microsoftTime.mp3" loop="true" autostart="true" width="2" height="0"> -->
     <p>If you are reading this, it is because your browser does not support the audio element.     </p>
