--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./timer.js"></script>
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Windows!!Event: possibly</title>
 </head>
 <body>
   <div class="bg-img"></div>
