add: logo and title

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./timer.js"></script>
     <link rel="stylesheet" href="./styles.css">
+    <link rel = "icon" href = 
+    "./resources/img/win-11-logo.jpg" 
+            type = "image/x-icon">
     <title>Windows!!Event: possibly</title>
 </head>
 <body>
