--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="bg-img"></div>
   <div class="container">
-    <h1 id="headline">Countdown for the <a href="https://www.microsoft.com/en-us/windows/event?ocid=usoc_sv_cons_win_awr_TWSound" alt="Microsoft event">Windows !!</a> launch :</h1>
+    <h1 id="headline">Countdown for the <a href="https://www.microsoft.com/en-us/windows/event?ocid=usoc_sv_cons_win_awr_TWSound" target="blank" alt="Microsoft event">Windows !!</a> launch :</h1>
     <div id="countdown">
       <ul>
         <li><span id="days"></span>days</li>
