add cononical link for pwa https traffic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#317EFB"/>
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="manifest" href="manifest.json">
+    <link rel="canonical" href="https://co-science.github.io/CountMeDown/"/>
     
 
 </head>
