--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="content" class="emoji">
       <span>🥳</span>
       <span>🎉</span>
-      <span>🎂</span>
+      <span>🍷</span>
     </div>
   </div> 
   
